style:watch and dark mode fix

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -3504,6 +3504,11 @@ li {
   background-color: rgb(242 53 142 / var(--tw-bg-opacity));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-60 {
   --tw-bg-opacity: 0.6;
 }
